--- a/exercicios/ex042/fundo002.html
+++ b/exercicios/ex042/fundo002.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo002</title>
     <style>
-        div {
+        body {
             background-image: url(imagens/pattern001.png);
             background-size: 100px 100px;
             background-repeat: no-repeat;
@@ -13,8 +13,5 @@
     </style>
 </head>
 <body>
-    <div>
-
-    </div>   
 </body>
 </html>
