--- a/exercicios/ex042/fundo002.html
+++ b/exercicios/ex042/fundo002.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundo002</title>
+</head>
     <style>
         body {
             background-image: url(imagens/pattern001.png);
@@ -11,7 +12,7 @@
             background-repeat: no-repeat;
         }
     </style>
-</head>
 <body>
+
 </body>
 </html>
