--- a/exercicios/desafios propostos/desafio012/index.html
+++ b/exercicios/desafios propostos/desafio012/index.html
@@ -12,16 +12,21 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-        #conteudo {
-
+        #astronauta {
+          width: 30vw;
+          max-width: 300px;
+          min-width: 150px;
+          height: auto;
         }
     </style>
 </head>
 <body id="container">
-    <div id="conteudo">
-
-    </div>   
+    <img src="imagens/astronauta.png" alt="Astronauta" id="astronauta">   
 </body>
 </html>
