--- a/exercicios/desafios propostos/desafio013/index.html
+++ b/exercicios/desafios propostos/desafio013/index.html
@@ -94,7 +94,7 @@
     </main>
     
     <footer>
-        Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a>, criador do <a href="https://www.cursoemvideo.com/">Curso em Video</a>
+        Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a>, criador do <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Video</a>
     </footer>
 </body>
 </html>
