--- a/exercicios/desafios propostos/desafio014/index.html
+++ b/exercicios/desafios propostos/desafio014/index.html
@@ -8,12 +8,98 @@
 </head>
 <body>
     <header>
-        <h1>a banda</h1>
+        <h1>A BANDA</h1>
+        <p>De Chico Buarque</p>
     </header>
     <main>
+        <section class="normal">
+            <p>
+                Estava à toa na vida <br>
+                O meu amor me chamou <br>
+                Pra ver a banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+
+            <p>
+                A minha gente sofrida <br>
+                Despediu-se da dor <br>
+                Pra ver a banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+
+            <p>
+                O homem sério que contava dinheiro parou <br>
+                O faroleiro que contava vantagem parou <br>
+                A namorada que contava as estrelas <br>
+                Parou para ver, ouvir e dar passagem <br>
+            </p>
+        </section>
+
+        <section class="imagem">
+            <p>
+                A moça triste que vivia calada sorriu <br>
+                A rosa triste que vivia fechada se abriu <br>
+                E a meninada toda se assanhou <br>
+                Pra ver a banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+
+            <p>
+                Estava à toa na vida <br>
+                O meu amor me chamou <br>
+                Pra ver a banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+        </section>
+
+        <section class="normal">
+            <p>
+                A minha gente sofrida <br>
+                Despediu-se da dor <br>
+                Pra ver a banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+
+            <p>
+                O velho fraco se esqueceu do cansaço e pensou <br>
+                Que ainda era moço pra sair no terraço e dançou <br>
+                A moça feia debruçou na janela <br>
+                Pensando que a banda tocava pra ela <br>
+            </p>
+
+            <p>
+                A marcha alegre se espalhou na avenida e insistiu <br>
+                A Lua cheia que vivia escondida surgiu <br>
+                Minha cidade toda se enfeitou <br>
+                Pra ver a banda passar cantando coisas de amor <br>
+            </p>
+        </section>
+
+        <section class="imagem">
+            <p>
+                Mas para meu desencanto <br>
+                O que era doce acabou <br>
+                Tudo tomou seu lugar <br>
+                Depois que a banda passou <br>
+            </p>
+
+            <p>
+                E cada qual no seu canto <br>
+                Em cada canto uma dor <br>
+                Depois da banda passar <br>
+                Cantando coisas de amor <br>
+                Depois da banda passar <br>
+                Cantando coisas de amor <br>
+                Depois da banda passar <br>
+                Cantando coisas de amor <br>
+            </p>
+        </section>
+    </main>
+    
+    <footer>
         <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quis delectus sit eius placeat vel autem asperiores dolorem ea! Laborum, eligendi? Labore reiciendis culpa fuga facere tenetur aliquam officia obcaecati?
+            Site criado por Dayvison Barbosa dos Santos
         </p>
-    </main>   
+    </footer>
 </body>
 </html>
