--- a/exercicios/desafios propostos/desafio014/index.html
+++ b/exercicios/desafios propostos/desafio014/index.html
@@ -35,7 +35,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img01">
             <p>
                 A moça triste que vivia calada sorriu <br>
                 A rosa triste que vivia fechada se abriu <br>
@@ -75,7 +75,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Mas para meu desencanto <br>
                 O que era doce acabou <br>
