--- a/exercicios/desafios propostos/desafio014/borda.html
+++ b/exercicios/desafios propostos/desafio014/borda.html
@@ -8,7 +8,7 @@
 <style>
     h1 {
         border: 12px solid transparent;
-        border-image: url("bordafuncional.png") 27 repeat;
+        border-image: url("imagens/bordafuncional.png") 27 repeat;
     }
 </style>
 <body>
