atualizei o padding top

--- a/exercicios/desafios propostos/desafio014/index.html
+++ b/exercicios/desafios propostos/desafio014/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <h1>A BANDA</h1>
-        <p>De Chico Buarque</p>
+        <p><a href="https://www.letras.mus.br/chico-buarque/45099/" target="_blank">De Chico Buarque</a></p>
     </header>
     <main>
-        <section class="normal">
+        <section class="normal" id="padding-top">
             <p>
                 Estava à toa na vida <br>
                 O meu amor me chamou <br>
@@ -98,7 +98,7 @@
     
     <footer>
         <p>
-            Site criado por Dayvison Barbosa dos Santos
+            Site criado por <a href="https://github.com/dayvisonbarbosa" target="_blank">Dayvison Barbosa dos Santos</a>
         </p>
     </footer>
 </body>
