--- a/exercicios/ex043/index.html
+++ b/exercicios/ex043/index.html
@@ -10,6 +10,11 @@
         border-collapse: collapse;
         width: 400px;
     }
+
+    td {
+        border: 1px solid black;
+        padding: 8px;
+    }
 </style>
 <body>
     <h1>Primeira Tabela Simples</h1>   
@@ -20,17 +25,13 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-    </table>
 
-    <table>
         <tr>
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
         </tr>
-    </table>
 
-    <table>
         <tr>
             <td>A3</td>
             <td>B3</td>
