--- a/exercicios/ex044/index.html
+++ b/exercicios/ex044/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alinhando o conteudo em tabelas</title>
 </head>
+<style>
+    td {
+        border: 1px solid black;
+    }
+
+    tr {
+        width: 400px;
+        height: 400px;
+    }
+</style>
 <body>
     <table>
         <tr>
