--- a/exercicios/ex044/index.html
+++ b/exercicios/ex044/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alinhando o conteudo em tabelas</title>
-</head>
-<style>
-    td {
-        border: 1px solid black;
-    }
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        table {
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
+        }
 
-    tr {
-        width: 400px;
-        height: 400px;
-    }
+        td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+            vertical-align: middle;
+        }
 </style>
+</head>
 <body>
     <table>
         <tr>
