--- a/exercicios/ex045/index.html
+++ b/exercicios/ex045/index.html
@@ -16,7 +16,14 @@
 
         table {
             width: 500px;
-            border-collapse: collapse;   
+            border-collapse: collapse;
+            position: relative;   
+        }
+
+        thead > tr > th {
+             position: sticky;
+             top: -1px;
+             background-color: rgb(83, 83, 83);
         }
 
         caption {
